--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,12 @@
         <activity
             android:name=".Refugee_Profile"
             android:label="@string/title_activity_refugee__profile"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:windowSoftInputMode="adjustPan" >
+        </activity>
+        <activity
+            android:name=".Donor_SignUp"
+            android:label="@string/title_activity_donor__sign_up"
             android:theme="@style/AppTheme.NoActionBar" >
         </activity>
     </application>
