--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.frusby.baseproject">
+    package="com.frusby.baseproject" >
 
     <!-- To auto-complete the email text field in the login form with the user's emails -->
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
@@ -12,11 +12,11 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".MainActivityRefugee"></activity>
+        android:theme="@style/AppTheme" >
+        <activity android:name=".MainActivityRefugee" />
         <activity
             android:name=".LOGIN"
-            android:label="@string/title_activity_login">
+            android:label="@string/title_activity_login" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -26,19 +26,21 @@
         <activity
             android:name=".SelectUserActivity"
             android:label="@string/title_activity_select_user"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".Refugee_Profile"
             android:label="@string/title_activity_refugee__profile"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".SelectClothesActivity"
             android:label="@string/title_activity_select_clothes"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".Donor_SignUp"
             android:label="@string/title_activity_donor__sign_up"
             android:theme="@style/AppTheme.NoActionBar" >
+        </activity>
+        <activity android:name=".tabs.STORY" >
         </activity>
     </application>
 
